test/fails/bad_types/vec_mult2.lgl
vec2 v = [2., 3.];
mat2x2 m = [[1., 1., 1.], [1., 1., 1.]];
print m * v;